--- a/res/drawable/keys.xml
+++ b/res/drawable/keys.xml
@@ -3,6 +3,7 @@
 
     <item android:drawable="@drawable/keys_pressed" android:state_pressed="true"/>
     <item android:drawable="@drawable/keys_focused" android:state_activated="true"/>
+    <item android:drawable="@drawable/keys_selected" android:state_selected="true"/>
     <item android:drawable="@drawable/keys_normal"/>
     
     
