--- a/res/layout/activity_practice_double.xml
+++ b/res/layout/activity_practice_double.xml
@@ -11,6 +11,33 @@
         android:background="@drawable/light_gradient" >
 
         <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_corners_layout"
+            android:orientation="vertical"
+            >
+
+            <LinearLayout
+                android:id="@+id/settingsLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_margin="5dp"
+                android:background="@drawable/settings"
+                android:orientation="vertical"
+                android:clickable="true"
+                android:onClick="settingsClick"
+                android:paddingRight="10dp">
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
