--- a/app/src/main/res/layout/item_rv_all_tests.xml
+++ b/app/src/main/res/layout/item_rv_all_tests.xml
@@ -1,45 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/test_results_list_bg">
 
     <com.aepronunciation.ipa.IpaTextView
         android:id="@+id/tvRvItemTestNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
         android:layout_margin="2dp"
-        android:textSize="12sp" />
+        android:textSize="12sp"/>
 
     <com.aepronunciation.ipa.IpaTextView
         android:id="@+id/tvRvItemTestUserName"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@id/tvRvItemTestNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_margin="2dp"
-        android:textSize="12sp" />
+        android:layout_toRightOf="@id/tvRvItemTestNumber"
+        android:textSize="12sp"/>
 
     <com.aepronunciation.ipa.IpaTextView
         android:id="@+id/tvRvItemTestDate"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_margin="2dp"
-        android:textSize="12sp" />
-
+        android:textSize="12sp"/>
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingTop="20dp"
-        android:paddingLeft="10dp"
         android:paddingBottom="5dp"
-        android:paddingRight="10dp" >
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="20dp">
 
         <com.aepronunciation.ipa.IpaTextView
             android:id="@+id/tvRvItemTestScore"
@@ -48,7 +49,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="20dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"/>
 
         <com.aepronunciation.ipa.IpaTextView
             android:id="@+id/tvRvItemTestType"
@@ -57,15 +58,15 @@
             android:layout_gravity="center_vertical"
             android:layout_marginRight="20dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"/>
 
         <!--<com.aepronunciation.ipa.IpaTextView-->
-            <!--android:id="@+id/tvRvItemTestNumberOfQuestions"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_gravity="center_vertical"-->
-            <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
-            <!--android:textColor="@color/black" />-->
+        <!--android:id="@+id/tvRvItemTestNumberOfQuestions"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_vertical"-->
+        <!--android:textAppearance="?android:attr/textAppearanceSmall"-->
+        <!--android:textColor="@color/black" />-->
 
 
     </LinearLayout>
