--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
     <style name="AppTheme.KeyLayoutStyle">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">match_parent</item>
-        <item name="android:padding">2dp</item>
+        <item name="android:layout_margin">2dp</item>
         <item name="android:background">@drawable/keys</item>
     </style>
 
@@ -38,9 +38,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_alignParentBottom">true</item>
-        <item name="android:layout_marginRight">1dp</item>
+        <item name="android:layout_marginRight">3dp</item>
         <item name="android:layout_marginBottom">0dp</item>
-        <item name="android:textColor">@color/keyboard_text_normal</item>
+        <item name="android:textColor">@color/keyboard_text_secondary</item>
         <item name="android:textSize">12sp</item>
     </style>
 
