--- a/app/src/main/res/layout/fragment_learn_single.xml
+++ b/app/src/main/res/layout/fragment_learn_single.xml
@@ -4,7 +4,6 @@
               android:layout_height="match_parent"
               android:orientation="horizontal">
 
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
@@ -14,6 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:baselineAligned="false"
             android:orientation="horizontal">
 
             <RelativeLayout
@@ -42,8 +42,6 @@
                     android:layout_centerVertical="true"
                     android:layout_alignParentLeft="true"/>
             </RelativeLayout>
-
-
 
         </LinearLayout>
 
