--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <!-- custom dimentions -->
+    <!-- custom dimensions -->
     <dimen name="grid_item_spacing">2dp</dimen>
 
 
