--- a/app/src/main/res/layout/fragment_test_content.xml
+++ b/app/src/main/res/layout/fragment_test_content.xml
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="10dp"
+                android:gravity="center_horizontal"
                 android:layout_weight="1"
                 android:textSize="50sp" />
 
