--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_margin">2dp</item>
         <item name="android:background">@drawable/keys</item>
+        <item name="android:soundEffectsEnabled">false</item>
     </style>
 
 
