added personal evaluation option

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,9 @@
           android:title="@string/main_menu_history"
           android:icon="@mipmap/ic_history_white_24dp"
           app:showAsAction="never"/>
+    <item android:id="@+id/action_personal_evaluation"
+        android:title="@string/main_menu_personal_evaluation"
+        app:showAsAction="never"/>
     <item android:id="@+id/action_about"
           android:title="@string/main_menu_about"
           android:icon="@mipmap/ic_info_outline_white_24dp"
