--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -50,6 +50,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button"
                 android:clickable="true"
+                android:focusable="true"
                 android:onClick="timeDetailsClick"
                 android:paddingBottom="5dp"
                 android:paddingLeft="20dp"
@@ -98,6 +99,7 @@
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button"
                 android:clickable="true"
+                android:focusable="true"
                 android:onClick="testDetailsClick"
                 android:paddingBottom="5dp"
                 android:paddingLeft="20dp"
