added Russian and Dark Theme

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
@@ -24,9 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/toolbar"
         android:background="?attr/colorPrimary"
+        app:tabTextColor="@color/onPrimaryDisabledTextColor"
+        app:tabSelectedTextColor="@color/onPrimaryTextColor"
+        app:tabIndicatorColor="@color/onPrimaryTextColor"
         android:elevation="6dp"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+        android:minHeight="?attr/actionBarSize"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/pager"
