--- a/app/src/main/res/layout/activity_personal_evaluation.xml
+++ b/app/src/main/res/layout/activity_personal_evaluation.xml
@@ -13,7 +13,7 @@
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"/>
 
     <com.aepronunciation.ipa.IpaTextView
         android:layout_width="wrap_content"
