--- a/app/src/main/res/layout/activity_keyboard_input.xml
+++ b/app/src/main/res/layout/activity_keyboard_input.xml
@@ -12,7 +12,7 @@
         android:elevation="6dp"
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+        app:popupTheme="@style/ThemeOverlay.AppCompat.DayNight"/>
 
     <com.aepronunciation.ipa.IpaEditText
         android:id="@+id/etInputWindow"
