--- a/app/src/main/res/layout/fragment_learn_single.xml
+++ b/app/src/main/res/layout/fragment_learn_single.xml
@@ -26,7 +26,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:textColor="@color/primary_text"
+                    android:textColor="@color/onBackgroundTextColor"
                     android:textSize="50sp"/>
             </RelativeLayout>
 
@@ -55,6 +55,7 @@
                 android:id="@+id/tvLearnSingleIpaDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textIsSelectable="true"
                 android:padding="10dp"/>
         </ScrollView>
     </LinearLayout>
