--- a/app/src/main/res/layout/fragment_practice_screen.xml
+++ b/app/src/main/res/layout/fragment_practice_screen.xml
@@ -68,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:padding="5dp"
+                android:tint="@color/onBackgroundIconsColor"
                 android:src="@mipmap/ic_clear_black_24dp" />
         </LinearLayout>
 
@@ -85,6 +86,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:tint="@color/onBackgroundIconsColor"
                 android:src="@mipmap/ic_play_arrow_black_48dp"/>
         </RelativeLayout>
     </LinearLayout>
@@ -105,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:tint="@color/onBackgroundIconsColor"
             android:src="@mipmap/ic_settings_black_24dp"/>
     </RelativeLayout>
 
