--- a/app/src/main/res/layout/fragment_test_content.xml
+++ b/app/src/main/res/layout/fragment_test_content.xml
@@ -35,6 +35,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:padding="5dp"
+                android:tint="@color/onBackgroundIconsColor"
                 android:src="@mipmap/ic_clear_black_24dp" />
         </LinearLayout>
 
@@ -51,6 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:tint="@color/onBackgroundIconsColor"
                 android:src="@mipmap/ic_play_arrow_black_48dp" />
         </RelativeLayout>
     </LinearLayout>
@@ -74,6 +76,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:tint="@color/onBackgroundIconsColor"
             android:src="@mipmap/ic_chevron_right_black_24dp" />
     </RelativeLayout>
 
