--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,45 +1,38 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
+    <color name="primaryColor">#1e88e5</color>
+    <color name="primaryDarkColor">#005cb2</color>
+    <color name="accentColor">#6ab7ff</color>
 
-    <color name="primary">#3F51B5</color>
-    <color name="primary_dark">#303F9F</color>
-    <color name="primary_light">#C5CAE9</color>
-    <color name="accent">#FF4081</color>
-    <color name="primary_text">#DE000000</color>
-    <color name="secondary_text">#8A000000</color>
-    <color name="disabled_text">#1F000000</color>
-    <color name="icons">#FFFFFF</color>
-    <color name="divider">#1F000000</color>
+    <color name="onPrimaryTextColor">#FFFFFF</color>
+    <color name="onPrimaryDisabledTextColor">#90ffffff</color>
+    <color name="onBackgroundTextColor">#000000</color>
+    <color name="onBackgroundDisabledTextColor">#30000000</color>
 
-    <!-- other colors -->
+    <color name="onPrimaryIconsColor">@color/onPrimaryTextColor</color>
+    <color name="onBackgroundIconsColor">@color/onBackgroundTextColor</color>
     <color name="clear">#00000000</color>
-    <color name="white">#ffffffff</color>
-    <color name="black">#ff000000</color>
     <color name="red">#ffff0000</color>
     <color name="green">#ff249900</color>
-    <color name="light_grey">#ffacacac</color>
-    <color name="very_light_grey">#ffe4e4e4</color>
 
     <color name="keyboard_background">@color/clear</color>
     <color name="keyboard_keys_normal">@color/clear</color>
-    <color name="keyboard_keys_pressed">@color/accent</color>
-    <color name="keyboard_text_normal">@color/primary_text</color>
-    <color name="keyboard_text_unselected">@color/disabled_text</color>
-    <color name="keyboard_text_secondary">@color/secondary_text</color>
-    <color name="keyboard_keys_border">@color/light_grey</color>
+    <color name="keyboard_keys_pressed">@color/accentColor</color>
+    <color name="keyboard_text_normal">@color/onBackgroundTextColor</color>
+    <color name="keyboard_text_unselected">@color/onBackgroundDisabledTextColor</color>
+    <color name="keyboard_text_secondary">@color/onBackgroundDisabledTextColor</color>
+    <color name="keyboard_keys_border">@color/onBackgroundDisabledTextColor</color>
 
     <color name="input_window_bg">@color/clear</color>
-    <color name="input_window_border">@color/black</color>
+    <color name="input_window_border">@color/onBackgroundDisabledTextColor</color>
     <color name="right">@color/green</color>
     <color name="wrong">@color/red</color>
 
     <color name="button_normal">@color/clear</color>
-    <color name="button_pressed">@color/accent</color>
-    <color name="button_stroke">@color/light_grey</color>
-    <color name="button_text">@color/primary_text</color>
+    <color name="button_pressed">@color/accentColor</color>
+    <color name="button_stroke">@color/onBackgroundDisabledTextColor</color>
+    <color name="button_text">@color/onBackgroundTextColor</color>
 
-    <color name="test_results_item_selected">@color/very_light_grey</color>
-    <color name="test_results_rv_outline">@color/light_grey</color>
-
-
+    <color name="test_results_item_selected">@color/primaryColor</color>
+    <color name="test_results_rv_outline">@color/onBackgroundDisabledTextColor</color>
 </resources>
